# VCFExplorer

./: Cargo.toml  LICENSE  README.md
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: rust.yml
src/: main.rs  tui.rs  vcf.rs
